Correction faute d'orthographe dans index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<title>GIT</title>
 	</head>
 	<body>
-		<h1>Ceci est une page de la formaition GIT</h1>
+		<h1>Ceci est une page de la formation GIT</h1>
 		<h2>Cela ne semble pas compliqué</h2>
 	</body>
 </html>
