--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<title>GIT</title>
 	</head>
 	<body>
-		<h1>Ceci est une page de la formaition GIT c'est différent de clearcase</h1>
+		<h1>Ceci est une page de la formaition GIT c'est différent de clearcase et SVN</h1>
 		<h1>une ligne en plus ça ne fait pas de mal"</h1>
 		<h2>Cela ne semble pas compliqué</h2>
 	</body>
