--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 		<title>GIT</title>
 	</head>
 	<body>
-		<h1>Ceci est une page de la formation GIT ENI</h1>
-		<h2>Cela ne semble pas compliqué</h2>
-		<h3>Coucou Remy</h3>
+		<h1>Ceci est une page de la formation GIT ENI.</h1>
+		<h2>Cela ne semble pas compliqué.</h2>
+		<h3>Coucou Remy !!!</h3>
 	</body>
 </html>
 <!-- Commentaire de fin -->
