--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 		<title>GIT</title>
 	</head>
 	<body>
-		<h1>Ceci est une page de la formation GIT ENI c'est différent de clearcase et SVN</h1>
-		<h1>une ligne en plus ça ne fait pas de mal"</h1>
+		<h1>Ceci est une page de la formation GIT ORSYS c'est différent de clearcase et SVN. Word c'est pas aussi bien</h1>
+		<h1>une ligne en plus et encore en plus ça ne fait pas de mal"</h1>
+		<h2>ca fait donc deux lignes en plus</h2>
 		<h2>Cela ne semble pas compliqué</h2>
 		<h3>Coucou Remy</h3>
 	</body>
